@@ -80,10 +80,8 @@ public class Foo {
 }
      ]]></code>
     </test-code>
-    <test-code regressionTest="false">
-        <description><![CDATA[
-[3394465] False positive for UselessStringValueOf
-     ]]></description>
+    <test-code>
+        <description>#976 False positive for UselessStringValueOf</description>
         <expected-problems>0</expected-problems>
         <code><![CDATA[
 class TestClass {
