@@ -1,5 +1,6 @@
 ????? ??, 2013 - 5.0.3:
 
+Fixed bug  976: UselessStringValueOf wrong when appending character arrays
 Fixed bug  977: MisplacedNullCheck makes false positives
 Fixed bug  984: Cyclomatic complexity should treat constructors like methods
 Fixed bug  985: Suppressed methods shouldn't affect avg CyclomaticComplexity
